2025-04-05T01:55:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14277210457 # 897
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-05
* notice: last 14d: unq all: 12 41
* notice: prev accum: outdated-unq outdated-all / unq all: 1027 5296 / 1041 5338
* notice: next accum: outdated-unq outdated-all / unq all: 1028 5297 / 1041 5338
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-03-21] / []

2025-04-04T12:49:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14265725603 # 896
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-04
* notice: last 14d: unq all: 13 42
* notice: prev accum: outdated-unq outdated-all / unq all: 1027 5296 / 1038 5325
* notice: next accum: outdated-unq outdated-all / unq all: 1027 5296 / 1041 5338
* notice: prev exec diff / last date diff / accum: unq all: +3 +13 -0 -0 / +3 +13 -0 -0 / 3 13
* notice: removed / changed dates: [] / [2025-04-04]

2025-04-03T12:50:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14243412924 # 894
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-03
* notice: last 14d: unq all: 10 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1025 5289 / 1037 5324
* notice: next accum: outdated-unq outdated-all / unq all: 1027 5296 / 1038 5325
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-20] / [2025-04-03]

2025-04-03T01:56:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14233280637 # 893