@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-05T01:55:01Z",
-  "count_outdated" : 5297,
-  "uniques_outdated" : 1028,
+  "timestamp" : "2025-04-05T12:43:56Z",
+  "count_outdated" : 5299,
+  "uniques_outdated" : 1029,
   "count" : 5338,
   "uniques" : 1041,
   "views" : [
-    {
-      "timestamp": "2025-03-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-24T00:00:00Z",
       "count": 9,
