@@ -1,12 +1,7 @@
 {
-  "count": 41,
-  "uniques": 12,
+  "count": 39,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2025-03-22T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-03-24T00:00:00Z",
       "count": 9,
